--- a/docs/professor/darlan_roque_dapieve.mdx
+++ b/docs/professor/darlan_roque_dapieve.mdx
@@ -10,20 +10,7 @@ const data = {
     },
     {
       dayName: "Terça-Feira",
-      dayClasses: [
-        {
-          subject: "Elementos de Máquinas",
-          size: 2,
-          teachers: [
-            "Darlan Roque Dapieve"
-          ],
-          classroom: "Sala 8-2",
-          students: [
-            "ELM2022"
-          ],
-          time: "21:00 - 21:50"
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Quarta-Feira",
@@ -60,18 +47,6 @@ const data = {
             "EIN2022"
           ],
           time: "10:15 - 11:05"
-        },
-        {
-          subject: "Manutenção Industrial e Gestão da Produção",
-          size: 1,
-          teachers: [
-            "Darlan Roque Dapieve"
-          ],
-          classroom: "Sala 2-2",
-          students: [
-            "EIN2020"
-          ],
-          time: "09:25 - 10:15"
         },
         {
           subject: "Tecnologia dos Materiais",
