--- a/docs/professor/fabio_fernandes_da_silva.mdx
+++ b/docs/professor/fabio_fernandes_da_silva.mdx
@@ -35,7 +35,20 @@ const data = {
     },
     {
       dayName: "Terça-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Elementos de Máquinas",
+          size: 2,
+          teachers: [
+            "Fábio Fernandes da Silva"
+          ],
+          classroom: "Sala 8-2",
+          students: [
+            "ELM2022"
+          ],
+          time: "21:00 - 21:50"
+        }
+      ]
     },
     {
       dayName: "Quarta-Feira",
