--- a/docs/professor/luiz_inacio_chaves.mdx
+++ b/docs/professor/luiz_inacio_chaves.mdx
@@ -61,6 +61,18 @@ const data = {
           time: "19:00 - 19:50"
         },
         {
+          subject: "Manutenção Industrial e Gestão da Produção",
+          size: 1,
+          teachers: [
+            "Luiz Inácio Chaves"
+          ],
+          classroom: "Sala 2-2",
+          students: [
+            "EIN2020"
+          ],
+          time: "09:25 - 10:15"
+        },
+        {
           subject: "Processos de Fabricação 2",
           size: 2,
           teachers: [
