--- a/docs/sala/bloco_2/sala_2-2.mdx
+++ b/docs/sala/bloco_2/sala_2-2.mdx
@@ -237,18 +237,6 @@ const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Manutenção Industrial e Gestão da Produção",
-          size: 1,
-          teachers: [
-            "Darlan Roque Dapieve"
-          ],
-          classroom: "Sala 2-2",
-          students: [
-            "EIN2020"
-          ],
-          time: "09:25 - 10:15"
-        },
-        {
           subject: "Marketing de Relacionamento",
           size: 2,
           teachers: [
@@ -272,6 +260,18 @@ const data = {
             "TGC2023"
           ],
           time: "19:00 - 19:50"
+        },
+        {
+          subject: "Manutenção Industrial e Gestão da Produção",
+          size: 1,
+          teachers: [
+            "Luiz Inácio Chaves"
+          ],
+          classroom: "Sala 2-2",
+          students: [
+            "EIN2020"
+          ],
+          time: "09:25 - 10:15"
         }
       ]
     }
