--- a/docs/turma/ein/ein2020.mdx
+++ b/docs/turma/ein/ein2020.mdx
@@ -200,18 +200,6 @@ const data = {
           time: "07:30 - 08:20"
         },
         {
-          subject: "Manutenção Industrial e Gestão da Produção",
-          size: 1,
-          teachers: [
-            "Darlan Roque Dapieve"
-          ],
-          classroom: "Sala 2-2",
-          students: [
-            "EIN2020"
-          ],
-          time: "09:25 - 10:15"
-        },
-        {
           subject: "Biologia 4",
           size: 2,
           teachers: [
@@ -222,6 +210,18 @@ const data = {
             "EIN2020"
           ],
           time: "10:15 - 11:05"
+        },
+        {
+          subject: "Manutenção Industrial e Gestão da Produção",
+          size: 1,
+          teachers: [
+            "Luiz Inácio Chaves"
+          ],
+          classroom: "Sala 2-2",
+          students: [
+            "EIN2020"
+          ],
+          time: "09:25 - 10:15"
         }
       ]
     }
