--- a/docs/turma/elm/elm2022.mdx
+++ b/docs/turma/elm/elm2022.mdx
@@ -31,7 +31,7 @@ const data = {
           subject: "Elementos de Máquinas",
           size: 2,
           teachers: [
-            "Darlan Roque Dapieve"
+            "Fábio Fernandes da Silva"
           ],
           classroom: "Sala 8-2",
           students: [
