--- a/docs/sala/bloco_2/sala_8-2.mdx
+++ b/docs/sala/bloco_2/sala_8-2.mdx
@@ -79,7 +79,7 @@ const data = {
           subject: "Elementos de Máquinas",
           size: 2,
           teachers: [
-            "Darlan Roque Dapieve"
+            "Fábio Fernandes da Silva"
           ],
           classroom: "Sala 8-2",
           students: [
