Ensalamentos Labs info

--- a/docs/professor/douglas_barbosa_sousa.mdx
+++ b/docs/professor/douglas_barbosa_sousa.mdx
@@ -64,7 +64,7 @@ const data = {
           teachers: [
             "Douglas Barbosa Sousa"
           ],
-          classroom: "Laboratório de Informatica B",
+          classroom: "Laboratório de Computação Aplicada",
           students: [
             "TADS_ESP"
           ],
