--- a/docs/professor/jhones_donizetti_mendes.mdx
+++ b/docs/professor/jhones_donizetti_mendes.mdx
@@ -91,7 +91,7 @@ const data = {
             "Jhones Donizetti Mendes",
             "Eliana Peliçon Pereira Figueira"
           ],
-          classroom: "",
+          classroom: "Laboratório de Informatica A",
           students: [
             "BIO_ESPECIAL_ESTÁGIO"
           ],
