--- a/docs/professor/rafael_gil_ferques.mdx
+++ b/docs/professor/rafael_gil_ferques.mdx
@@ -104,7 +104,7 @@ const data = {
           teachers: [
             "Rafael Gil Ferques"
           ],
-          classroom: "Laboratório de Informatica B",
+          classroom: "Laboratório de Computação Aplicada",
           students: [
             "TADS_ESP"
           ],
@@ -128,7 +128,7 @@ const data = {
           teachers: [
             "Rafael Gil Ferques"
           ],
-          classroom: "Laboratório de Informatica B",
+          classroom: "Laboratório de Computação Aplicada",
           students: [
             "TADS_ESP"
           ],
