--- a/docs/professor/rafael_silva_santos.mdx
+++ b/docs/professor/rafael_silva_santos.mdx
@@ -87,7 +87,7 @@ const data = {
           teachers: [
             "Rafael Silva Santos"
           ],
-          classroom: "Laboratório de Informatica A",
+          classroom: "Laboratório de Informatica B",
           students: [
             "TGC2022"
           ],
@@ -116,7 +116,7 @@ const data = {
           teachers: [
             "Rafael Silva Santos"
           ],
-          classroom: "Laboratório de Informatica A",
+          classroom: "Laboratório de Informatica B",
           students: [
             "TGC2022"
           ],
