--- a/docs/sala/bloco_1/laboratorio_de_informatica_a.mdx
+++ b/docs/sala/bloco_1/laboratorio_de_informatica_a.mdx
@@ -15,6 +15,19 @@ const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
+          subject: "Trabalho de conclusão de curso I",
+          size: 2,
+          teachers: [
+            "Jhones Donizetti Mendes",
+            "Eliana Peliçon Pereira Figueira"
+          ],
+          classroom: "Laboratório de Informatica A",
+          students: [
+            "BIO_ESPECIAL_ESTÁGIO"
+          ],
+          time: "19:00 - 19:50"
+        },
+        {
           subject: "Informática Instrumental",
           size: 2,
           teachers: [
@@ -49,14 +62,14 @@ const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Comércio Eletrônico e Mídias Digitais (PPC 2019)",
-          size: 2,
+          subject: "Trabalho de conclusão de curso II",
+          size: 1,
           teachers: [
-            "Rafael Silva Santos"
+            "Eliana Peliçon Pereira Figueira"
           ],
           classroom: "Laboratório de Informatica A",
           students: [
-            "TGC2022"
+            "BIO_ESPECIAL_ESTÁGIO"
           ],
           time: "19:00 - 19:50"
         }
@@ -64,20 +77,7 @@ const data = {
     },
     {
       dayName: "Sexta-Feira",
-      dayClasses: [
-        {
-          subject: "Comércio Eletrônico e Mídias Digitais (PPC 2019)",
-          size: 2,
-          teachers: [
-            "Rafael Silva Santos"
-          ],
-          classroom: "Laboratório de Informatica A",
-          students: [
-            "TGC2022"
-          ],
-          time: "21:00 - 21:50"
-        }
-      ]
+      dayClasses: []
     }
   ],
   time: [
