--- a/docs/turma/tads/tads_esp.mdx
+++ b/docs/turma/tads/tads_esp.mdx
@@ -91,7 +91,7 @@ const data = {
           teachers: [
             "Douglas Barbosa Sousa"
           ],
-          classroom: "Laboratório de Informatica B",
+          classroom: "Laboratório de Computação Aplicada",
           students: [
             "TADS_ESP"
           ],
@@ -108,7 +108,7 @@ const data = {
           teachers: [
             "Rafael Gil Ferques"
           ],
-          classroom: "Laboratório de Informatica B",
+          classroom: "Laboratório de Computação Aplicada",
           students: [
             "TADS_ESP"
           ],
@@ -120,7 +120,7 @@ const data = {
           teachers: [
             "Rafael Gil Ferques"
           ],
-          classroom: "Laboratório de Informatica B",
+          classroom: "Laboratório de Computação Aplicada",
           students: [
             "TADS_ESP"
           ],
