--- a/docs/turma/tgc/tgc2022.mdx
+++ b/docs/turma/tgc/tgc2022.mdx
@@ -118,7 +118,7 @@ const data = {
           teachers: [
             "Rafael Silva Santos"
           ],
-          classroom: "Laboratório de Informatica A",
+          classroom: "Laboratório de Informatica B",
           students: [
             "TGC2022"
           ],
@@ -148,7 +148,7 @@ const data = {
           teachers: [
             "Rafael Silva Santos"
           ],
-          classroom: "Laboratório de Informatica A",
+          classroom: "Laboratório de Informatica B",
           students: [
             "TGC2022"
           ],
