--- a/docs/professor/eliana_pelicon_pereira_figueira.mdx
+++ b/docs/professor/eliana_pelicon_pereira_figueira.mdx
@@ -42,7 +42,7 @@ const data = {
             "Jhones Donizetti Mendes",
             "Eliana Peliçon Pereira Figueira"
           ],
-          classroom: "",
+          classroom: "Laboratório de Informatica A",
           students: [
             "BIO_ESPECIAL_ESTÁGIO"
           ],
@@ -114,7 +114,7 @@ const data = {
           teachers: [
             "Eliana Peliçon Pereira Figueira"
           ],
-          classroom: "",
+          classroom: "Laboratório de Informatica A",
           students: [
             "BIO_ESPECIAL_ESTÁGIO"
           ],
