--- a/docs/sala/bloco_1/laboratorio_de_computacao_aplicada.mdx
+++ b/docs/sala/bloco_1/laboratorio_de_computacao_aplicada.mdx
@@ -49,6 +49,18 @@ const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
+          subject: "Linguagem de Programação",
+          size: 4,
+          teachers: [
+            "Douglas Barbosa Sousa"
+          ],
+          classroom: "Laboratório de Computação Aplicada",
+          students: [
+            "TADS_ESP"
+          ],
+          time: "19:00 - 19:50"
+        },
+        {
           subject: "Administração de Sistemas Operacionais e Redes",
           size: 2,
           teachers: [
@@ -76,7 +88,32 @@ const data = {
     },
     {
       dayName: "Sexta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Introdução à Programação Web",
+          size: 2,
+          teachers: [
+            "Rafael Gil Ferques"
+          ],
+          classroom: "Laboratório de Computação Aplicada",
+          students: [
+            "TADS_ESP"
+          ],
+          time: "21:00 - 21:50"
+        },
+        {
+          subject: "Tecnologias WEB",
+          size: 2,
+          teachers: [
+            "Rafael Gil Ferques"
+          ],
+          classroom: "Laboratório de Computação Aplicada",
+          students: [
+            "TADS_ESP"
+          ],
+          time: "19:00 - 19:50"
+        }
+      ]
     }
   ],
   time: [
