--- a/docs/sala/bloco_1/laboratorio_de_informatica_b.mdx
+++ b/docs/sala/bloco_1/laboratorio_de_informatica_b.mdx
@@ -86,14 +86,26 @@ const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Linguagem de Programação",
-          size: 4,
+          subject: "Sistemas Digitais",
+          size: 2,
           teachers: [
-            "Douglas Barbosa Sousa"
+            "Jair Fajardo Junior"
           ],
           classroom: "Laboratório de Informatica B",
           students: [
-            "TADS_ESP"
+            "EIN2022"
+          ],
+          time: "07:30 - 08:20"
+        },
+        {
+          subject: "Comércio Eletrônico e Mídias Digitais (PPC 2019)",
+          size: 2,
+          teachers: [
+            "Rafael Silva Santos"
+          ],
+          classroom: "Laboratório de Informatica B",
+          students: [
+            "TGC2022"
           ],
           time: "19:00 - 19:50"
         }
@@ -103,28 +115,16 @@ const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Introdução à Programação Web",
+          subject: "Comércio Eletrônico e Mídias Digitais (PPC 2019)",
           size: 2,
           teachers: [
-            "Rafael Gil Ferques"
+            "Rafael Silva Santos"
           ],
           classroom: "Laboratório de Informatica B",
           students: [
-            "TADS_ESP"
+            "TGC2022"
           ],
           time: "21:00 - 21:50"
-        },
-        {
-          subject: "Tecnologias WEB",
-          size: 2,
-          teachers: [
-            "Rafael Gil Ferques"
-          ],
-          classroom: "Laboratório de Informatica B",
-          students: [
-            "TADS_ESP"
-          ],
-          time: "19:00 - 19:50"
         }
       ]
     }
