--- a/docs/sala/bloco_2/laboratorio_de_informatica_c.mdx
+++ b/docs/sala/bloco_2/laboratorio_de_informatica_c.mdx
@@ -55,22 +55,35 @@ const data = {
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Desenho Técnico",
+          size: 3,
+          teachers: [
+            "Sérgio Takahashi"
+          ],
+          classroom: "Laboratório de Informatica C",
+          students: [
+            "EIN2023 - Grupo B"
+          ],
+          time: "09:25 - 10:15"
+        }
+      ]
     },
     {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Sistemas Digitais",
+          subject: "PCCC 5 - Teoria e prática para o ensino de ciências e biologia",
           size: 2,
           teachers: [
-            "Jair Fajardo Junior"
+            "Marcia Aparecida Barbosa"
           ],
           classroom: "Laboratório de Informatica C",
           students: [
-            "EIN2022"
+            "BIO_ESPECIAL_2"
           ],
-          time: "07:30 - 08:20"
+          time: "19:00 - 19:50"
         },
         {
           subject: "Informática instrumental e aplicada",
