--- a/docs/turma/ein/ein2023.mdx
+++ b/docs/turma/ein/ein2023.mdx
@@ -134,7 +134,7 @@ const data = {
           teachers: [
             "Sérgio Takahashi"
           ],
-          classroom: "Laboratório de Desenho Técnico / Sala 5-2",
+          classroom: "Laboratório de Informatica C",
           students: [
             "EIN2023 - Grupo B"
           ],
