--- a/docs/professor/alexandre_rodrigues_monge.mdx
+++ b/docs/professor/alexandre_rodrigues_monge.mdx
@@ -17,7 +17,7 @@ const data = {
           teachers: [
             "Alexandre Rodrigues Monge"
           ],
-          classroom: "Sala 13-2",
+          classroom: "Laboratório de Informatica A",
           students: [
             "IIW2022A"
           ],
@@ -29,7 +29,7 @@ const data = {
           teachers: [
             "Alexandre Rodrigues Monge"
           ],
-          classroom: "Sala 13-2",
+          classroom: "Laboratório de Informatica A",
           students: [
             "IIW2022A"
           ],
@@ -41,7 +41,7 @@ const data = {
           teachers: [
             "Alexandre Rodrigues Monge"
           ],
-          classroom: "Sala 9-2",
+          classroom: "Laboratório de Informatica A",
           students: [
             "IIW2023A"
           ],
