--- a/docs/professor/caroline_domingues_porto_do_nascimento_barbieri.mdx
+++ b/docs/professor/caroline_domingues_porto_do_nascimento_barbieri.mdx
@@ -73,7 +73,7 @@ const data = {
           teachers: [
             "Caroline Domingues Porto do Nascimento Barbieri"
           ],
-          classroom: "Sala 9-2",
+          classroom: "Laboratório de Informatica A",
           students: [
             "IIW2023A"
           ],
@@ -85,7 +85,7 @@ const data = {
           teachers: [
             "Caroline Domingues Porto do Nascimento Barbieri"
           ],
-          classroom: "Sala 9-2",
+          classroom: "Laboratório de Informatica A",
           students: [
             "IIW2023A"
           ],
