--- a/docs/professor/joaquim_jose_honorio_de_lima.mdx
+++ b/docs/professor/joaquim_jose_honorio_de_lima.mdx
@@ -25,7 +25,7 @@ const data = {
           teachers: [
             "Joaquim José Honório de Lima"
           ],
-          classroom: "Sala 9-2",
+          classroom: "Laboratório de Informatica A",
           students: [
             "IIW2023A"
           ],
@@ -42,7 +42,7 @@ const data = {
           teachers: [
             "Joaquim José Honório de Lima"
           ],
-          classroom: "Laboratório de Informatica A",
+          classroom: "Laboratório de Informatica C",
           students: [
             "EIN2023"
           ],
@@ -75,7 +75,7 @@ const data = {
           teachers: [
             "Joaquim José Honório de Lima"
           ],
-          classroom: "Sala 9-2",
+          classroom: "Laboratório de Informatica A",
           students: [
             "IIW2023A"
           ],
