--- a/docs/professor/luis_henrique_manosso_von_mecheln.mdx
+++ b/docs/professor/luis_henrique_manosso_von_mecheln.mdx
@@ -38,7 +38,7 @@ const data = {
           teachers: [
             "Luis Henrique Manosso Von Mecheln"
           ],
-          classroom: "Sala 16-2",
+          classroom: "Laboratório de Informatica B",
           students: [
             "IIW2021"
           ],
