--- a/docs/professor/rafael_gil_ferques.mdx
+++ b/docs/professor/rafael_gil_ferques.mdx
@@ -13,7 +13,7 @@ const data = {
           teachers: [
             "Rafael Gil Ferques"
           ],
-          classroom: "Sala 16-2",
+          classroom: "Laboratório de Informatica B",
           students: [
             "IIW2021"
           ],
@@ -34,7 +34,7 @@ const data = {
           teachers: [
             "Rafael Gil Ferques"
           ],
-          classroom: "Sala 16-2",
+          classroom: "Laboratório de Informatica B",
           students: [
             "IIW2021"
           ],
@@ -51,7 +51,7 @@ const data = {
           teachers: [
             "Rafael Gil Ferques"
           ],
-          classroom: "Sala 13-2",
+          classroom: "Laboratório de Informatica A",
           students: [
             "IIW2022A"
           ],
@@ -87,7 +87,7 @@ const data = {
           teachers: [
             "Rafael Gil Ferques"
           ],
-          classroom: "Sala 16-2",
+          classroom: "Laboratório de Informatica B",
           students: [
             "IIW2021"
           ],
@@ -116,7 +116,7 @@ const data = {
           teachers: [
             "Rafael Gil Ferques"
           ],
-          classroom: "Sala 16-2",
+          classroom: "Laboratório de Informatica B",
           students: [
             "IIW2021"
           ],
