--- a/docs/sala/bloco_1/laboratorio_de_informatica_a.mdx
+++ b/docs/sala/bloco_1/laboratorio_de_informatica_a.mdx
@@ -9,11 +9,60 @@ const data = {
   weekClasses: [
     {
       dayName: "Segunda-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Linguagens de apresentação e estruturação de conteúdos",
+          size: 2,
+          teachers: [
+            "Joaquim José Honório de Lima"
+          ],
+          classroom: "Laboratório de Informatica A",
+          students: [
+            "IIW2023A"
+          ],
+          time: "08:20 - 09:10"
+        }
+      ]
     },
     {
       dayName: "Terça-Feira",
       dayClasses: [
+        {
+          subject: "Laboratório de Banco de Dados",
+          size: 2,
+          teachers: [
+            "Alexandre Rodrigues Monge"
+          ],
+          classroom: "Laboratório de Informatica A",
+          students: [
+            "IIW2022A"
+          ],
+          time: "13:10 - 14:00"
+        },
+        {
+          subject: "Projeto Integrador II",
+          size: 2,
+          teachers: [
+            "Alexandre Rodrigues Monge"
+          ],
+          classroom: "Laboratório de Informatica A",
+          students: [
+            "IIW2022A"
+          ],
+          time: "15:05 - 15:55"
+        },
+        {
+          subject: "Projeto integrador I",
+          size: 2,
+          teachers: [
+            "Alexandre Rodrigues Monge"
+          ],
+          classroom: "Laboratório de Informatica A",
+          students: [
+            "IIW2023A"
+          ],
+          time: "10:15 - 11:05"
+        },
         {
           subject: "Trabalho de conclusão de curso I",
           size: 2,
@@ -26,18 +75,6 @@ const data = {
             "BIO_ESPECIAL_ESTÁGIO"
           ],
           time: "19:00 - 19:50"
-        },
-        {
-          subject: "Informática Instrumental",
-          size: 2,
-          teachers: [
-            "Joaquim José Honório de Lima"
-          ],
-          classroom: "Laboratório de Informatica A",
-          students: [
-            "EIN2023"
-          ],
-          time: "10:15 - 11:05"
         },
         {
           subject: "Estágio curricular supervisionado 1421/496/2039",
@@ -56,7 +93,32 @@ const data = {
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Fundamentos de informática",
+          size: 2,
+          teachers: [
+            "Caroline Domingues Porto do Nascimento Barbieri"
+          ],
+          classroom: "Laboratório de Informatica A",
+          students: [
+            "IIW2023A"
+          ],
+          time: "10:15 - 11:05"
+        },
+        {
+          subject: "Lógica de programação",
+          size: 2,
+          teachers: [
+            "Caroline Domingues Porto do Nascimento Barbieri"
+          ],
+          classroom: "Laboratório de Informatica A",
+          students: [
+            "IIW2023A"
+          ],
+          time: "07:30 - 08:20"
+        }
+      ]
     },
     {
       dayName: "Quinta-Feira",
@@ -72,6 +134,30 @@ const data = {
             "BIO_ESPECIAL_ESTÁGIO"
           ],
           time: "19:00 - 19:50"
+        },
+        {
+          subject: "Linguagens de apresentação e estruturação de conteúdos",
+          size: 2,
+          teachers: [
+            "Joaquim José Honório de Lima"
+          ],
+          classroom: "Laboratório de Informatica A",
+          students: [
+            "IIW2023A"
+          ],
+          time: "15:05 - 15:55"
+        },
+        {
+          subject: "Desenvolvimento WEB Orientado a Objetos",
+          size: 2,
+          teachers: [
+            "Rafael Gil Ferques"
+          ],
+          classroom: "Laboratório de Informatica A",
+          students: [
+            "IIW2022A"
+          ],
+          time: "10:15 - 11:05"
         }
       ]
     },
