--- a/docs/turma/iiw/iiw2021.mdx
+++ b/docs/turma/iiw/iiw2021.mdx
@@ -16,11 +16,11 @@ const data = {
           teachers: [
             "Eduardo Alberto Felippsen"
           ],
-          classroom: "Sala 16-2",
+          classroom: "Laboratório de Informatica B",
           students: [
             "IIW2021"
           ],
-          time: "10:15 - 11:05"
+          time: "07:30 - 08:20"
         },
         {
           subject: "Serviços em nuvem",
@@ -28,7 +28,7 @@ const data = {
           teachers: [
             "Rafael Gil Ferques"
           ],
-          classroom: "Sala 16-2",
+          classroom: "Laboratório de Informatica B",
           students: [
             "IIW2021"
           ],
@@ -44,7 +44,7 @@ const data = {
           students: [
             "IIW2021"
           ],
-          time: "07:30 - 08:20"
+          time: "10:15 - 11:05"
         }
       ]
     },
@@ -122,7 +122,7 @@ const data = {
           teachers: [
             "Rafael Gil Ferques"
           ],
-          classroom: "Sala 16-2",
+          classroom: "Laboratório de Informatica B",
           students: [
             "IIW2021"
           ],
@@ -175,7 +175,7 @@ const data = {
           teachers: [
             "Luis Henrique Manosso Von Mecheln"
           ],
-          classroom: "Sala 16-2",
+          classroom: "Laboratório de Informatica B",
           students: [
             "IIW2021"
           ],
@@ -187,7 +187,7 @@ const data = {
           teachers: [
             "Rafael Gil Ferques"
           ],
-          classroom: "Sala 16-2",
+          classroom: "Laboratório de Informatica B",
           students: [
             "IIW2021"
           ],
@@ -228,7 +228,7 @@ const data = {
           teachers: [
             "Rafael Gil Ferques"
           ],
-          classroom: "Sala 16-2",
+          classroom: "Laboratório de Informatica B",
           students: [
             "IIW2021"
           ],
