--- a/docs/turma/iiw/iiw2022a.mdx
+++ b/docs/turma/iiw/iiw2022a.mdx
@@ -20,7 +20,7 @@ const data = {
           students: [
             "IIW2022A"
           ],
-          time: "09:25 - 10:15"
+          time: "07:30 - 08:20"
         },
         {
           subject: "Química II",
@@ -44,7 +44,7 @@ const data = {
           students: [
             "IIW2022A"
           ],
-          time: "07:30 - 08:20"
+          time: "08:20 - 09:10"
         }
       ]
     },
@@ -57,7 +57,7 @@ const data = {
           teachers: [
             "Alexandre Rodrigues Monge"
           ],
-          classroom: "Sala 13-2",
+          classroom: "Laboratório de Informatica A",
           students: [
             "IIW2022A"
           ],
@@ -69,7 +69,7 @@ const data = {
           teachers: [
             "Alexandre Rodrigues Monge"
           ],
-          classroom: "Sala 13-2",
+          classroom: "Laboratório de Informatica A",
           students: [
             "IIW2022A"
           ],
@@ -199,7 +199,7 @@ const data = {
           teachers: [
             "Rafael Gil Ferques"
           ],
-          classroom: "Sala 13-2",
+          classroom: "Laboratório de Informatica A",
           students: [
             "IIW2022A"
           ],
