--- a/docs/professor/eduardo_alberto_felippsen.mdx
+++ b/docs/professor/eduardo_alberto_felippsen.mdx
@@ -25,11 +25,11 @@ const data = {
           teachers: [
             "Eduardo Alberto Felippsen"
           ],
-          classroom: "Sala 16-2",
+          classroom: "Laboratório de Informatica B",
           students: [
             "IIW2021"
           ],
-          time: "10:15 - 11:05"
+          time: "07:30 - 08:20"
         }
       ]
     },
