--- a/docs/sala/bloco_1/laboratorio_de_computacao_aplicada.mdx
+++ b/docs/sala/bloco_1/laboratorio_de_computacao_aplicada.mdx
@@ -20,7 +20,7 @@ const data = {
           students: [
             "IIW2022A"
           ],
-          time: "07:30 - 08:20"
+          time: "08:20 - 09:10"
         }
       ]
     },
@@ -42,6 +42,18 @@ const data = {
             "ELM2023"
           ],
           time: "19:00 - 19:50"
+        },
+        {
+          subject: "Desenho Técnico",
+          size: 3,
+          teachers: [
+            "Sérgio Takahashi"
+          ],
+          classroom: "Laboratório de Computação Aplicada",
+          students: [
+            "EIN2023 - Grupo B"
+          ],
+          time: "09:25 - 10:15"
         }
       ]
     },
