--- a/docs/sala/bloco_1/laboratorio_de_informatica_b.mdx
+++ b/docs/sala/bloco_1/laboratorio_de_informatica_b.mdx
@@ -23,6 +23,18 @@ const data = {
           time: "19:00 - 19:50"
         },
         {
+          subject: "Projeto Integrador III",
+          size: 2,
+          teachers: [
+            "Eduardo Alberto Felippsen"
+          ],
+          classroom: "Laboratório de Informatica B",
+          students: [
+            "IIW2021"
+          ],
+          time: "07:30 - 08:20"
+        },
+        {
           subject: "Metodologia de Pesquisa Científica",
           size: 1,
           teachers: [
@@ -45,6 +57,18 @@ const data = {
             "TADS_ESP"
           ],
           time: "21:50 - 22:40"
+        },
+        {
+          subject: "Serviços em nuvem",
+          size: 1,
+          teachers: [
+            "Rafael Gil Ferques"
+          ],
+          classroom: "Laboratório de Informatica B",
+          students: [
+            "IIW2021"
+          ],
+          time: "09:25 - 10:15"
         }
       ]
     },
@@ -79,6 +103,18 @@ const data = {
             "TADS_ESP"
           ],
           time: "19:00 - 19:50"
+        },
+        {
+          subject: "Serviços em nuvem",
+          size: 1,
+          teachers: [
+            "Rafael Gil Ferques"
+          ],
+          classroom: "Laboratório de Informatica B",
+          students: [
+            "IIW2021"
+          ],
+          time: "09:25 - 10:15"
         }
       ]
     },
@@ -86,14 +122,26 @@ const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Sistemas Digitais",
+          subject: "Desenvolvimento Responsivo e Otimização de Sites",
           size: 2,
           teachers: [
-            "Jair Fajardo Junior"
+            "Luis Henrique Manosso Von Mecheln"
           ],
           classroom: "Laboratório de Informatica B",
           students: [
-            "EIN2022"
+            "IIW2021"
+          ],
+          time: "14:00 - 14:50"
+        },
+        {
+          subject: "Sistemas Gerenciadores de Conteúdo WEB",
+          size: 2,
+          teachers: [
+            "Rafael Gil Ferques"
+          ],
+          classroom: "Laboratório de Informatica B",
+          students: [
+            "IIW2021"
           ],
           time: "07:30 - 08:20"
         },
@@ -114,6 +162,18 @@ const data = {
     {
       dayName: "Sexta-Feira",
       dayClasses: [
+        {
+          subject: "Prototipação de Interfaces e Interação Humano-Computador",
+          size: 2,
+          teachers: [
+            "Rafael Gil Ferques"
+          ],
+          classroom: "Laboratório de Informatica B",
+          students: [
+            "IIW2021"
+          ],
+          time: "10:15 - 11:05"
+        },
         {
           subject: "Comércio Eletrônico e Mídias Digitais (PPC 2019)",
           size: 2,
