--- a/docs/sala/bloco_2/laboratorio_de_informatica_c.mdx
+++ b/docs/sala/bloco_2/laboratorio_de_informatica_c.mdx
@@ -40,6 +40,18 @@ const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
+          subject: "Informática Instrumental",
+          size: 2,
+          teachers: [
+            "Joaquim José Honório de Lima"
+          ],
+          classroom: "Laboratório de Informatica C",
+          students: [
+            "EIN2023"
+          ],
+          time: "10:15 - 11:05"
+        },
+        {
           subject: "Comércio Eletrônico e Mídias Digitais",
           size: 2,
           teachers: [
@@ -55,24 +67,23 @@ const data = {
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: [
-        {
-          subject: "Desenho Técnico",
-          size: 3,
-          teachers: [
-            "Sérgio Takahashi"
-          ],
-          classroom: "Laboratório de Informatica C",
-          students: [
-            "EIN2023 - Grupo B"
-          ],
-          time: "09:25 - 10:15"
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Quinta-Feira",
       dayClasses: [
+        {
+          subject: "Sistemas Digitais",
+          size: 2,
+          teachers: [
+            "Jair Fajardo Junior"
+          ],
+          classroom: "Laboratório de Informatica C",
+          students: [
+            "EIN2022"
+          ],
+          time: "07:30 - 08:20"
+        },
         {
           subject: "PCCC 5 - Teoria e prática para o ensino de ciências e biologia",
           size: 2,
