--- a/docs/turma/ein/ein2023.mdx
+++ b/docs/turma/ein/ein2023.mdx
@@ -20,7 +20,7 @@ const data = {
           students: [
             "EIN2023"
           ],
-          time: "07:30 - 08:20"
+          time: "09:25 - 10:15"
         },
         {
           subject: "Física 1",
@@ -32,7 +32,7 @@ const data = {
           students: [
             "EIN2023"
           ],
-          time: "08:20 - 09:10"
+          time: "10:15 - 11:05"
         },
         {
           subject: "Matemática 1",
@@ -44,7 +44,7 @@ const data = {
           students: [
             "EIN2023"
           ],
-          time: "10:15 - 11:05"
+          time: "07:30 - 08:20"
         }
       ]
     },
@@ -93,7 +93,7 @@ const data = {
           teachers: [
             "Joaquim José Honório de Lima"
           ],
-          classroom: "Laboratório de Informatica A",
+          classroom: "Laboratório de Informatica C",
           students: [
             "EIN2023"
           ],
@@ -134,7 +134,7 @@ const data = {
           teachers: [
             "Sérgio Takahashi"
           ],
-          classroom: "Laboratório de Informatica C",
+          classroom: "Laboratório de Computação Aplicada",
           students: [
             "EIN2023 - Grupo B"
           ],
