--- a/docs/turma/iiw/iiw2023a.mdx
+++ b/docs/turma/iiw/iiw2023a.mdx
@@ -40,7 +40,7 @@ const data = {
           teachers: [
             "Joaquim José Honório de Lima"
           ],
-          classroom: "Sala 9-2",
+          classroom: "Laboratório de Informatica A",
           students: [
             "IIW2023A"
           ],
@@ -57,7 +57,7 @@ const data = {
           teachers: [
             "Alexandre Rodrigues Monge"
           ],
-          classroom: "Sala 9-2",
+          classroom: "Laboratório de Informatica A",
           students: [
             "IIW2023A"
           ],
@@ -134,7 +134,7 @@ const data = {
           teachers: [
             "Caroline Domingues Porto do Nascimento Barbieri"
           ],
-          classroom: "Sala 9-2",
+          classroom: "Laboratório de Informatica A",
           students: [
             "IIW2023A"
           ],
@@ -146,7 +146,7 @@ const data = {
           teachers: [
             "Caroline Domingues Porto do Nascimento Barbieri"
           ],
-          classroom: "Sala 9-2",
+          classroom: "Laboratório de Informatica A",
           students: [
             "IIW2023A"
           ],
@@ -199,7 +199,7 @@ const data = {
           teachers: [
             "Joaquim José Honório de Lima"
           ],
-          classroom: "Sala 9-2",
+          classroom: "Laboratório de Informatica A",
           students: [
             "IIW2023A"
           ],
